# NoAnomalies

./: .gitignore  CMakeLists.txt  README.md  defines.h  estruturas.h  jogo_estado.c  main.c  menu_screen.c  menu_screen.h
MENU/: DescCarreg.c  aplicar.c  aplicar.h  botao_fechar.c  botao_fechar.h  botao_tutorial.c  botao_tutorial.h  defines.h  estruturas.h  jogo_estado.c  main.c  menu_screen.c  menu_screen.h  popup_opcoes.c  popup_opcoes.h  seletor_resolucao.c  seletor_resolucao.h  slider_volume.c  slider_volume.h  ui_helpers.c  ui_helpers.h
MENU/C/: DescCarreg.c  jogo_estado.c  main.c  menu_screen.c
MENU/H/: DescCarreg.h  defines.h  estruturas.h
MENU/InGAME/: RoomChange.c  RoomChange.h  bedRoom.c  bedRoom.h  botaoVoltar.c  botaoVoltar.h  game_screen.c  game_screen.h  livingRoom.c  livingRoom.h  painel_reporte.c  painel_reporte.h  report.c  report.h
MENU/POPUP/: aplicar.c  botao_tutorial.c  popup_opcoes.c  popup_opcoes.h  seletor_resolucao.c  slider_volume.c  slider_volume.h  ui_helpers.c
